# AtRife

./: .gitignore  Cargo.toml  README.md  avr-atmega2560.json  avr2560.hex  makefile  upload
src/: game_of_life.rs  main.rs  std_config.rs
